<resources>
    <string name="app_name" translatable="false">ExSangNtn</string>
    <string name="nav_home" translatable="false">Home</string>
    <string name="nav_settings" translatable="false">Settings</string>
    <string name="nav_share" translatable="false">Share</string>
    <string name="nav_send" translatable="false">Send</string>
    <string name="nav_communicate" translatable="false">Communicate</string>

    <string name="navigation_drawer_open" translatable="false">Open Navigation Drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close Navigation Drawer</string>
</resources>
